Adding index.html and remove not used menus

--- a/layouts/partials/sidebar/docs-toc-documentation.html
+++ b/layouts/partials/sidebar/docs-toc-documentation.html
@@ -1,14 +1,14 @@
 <div class="page-links">
     <h2 class="h3">Other Resources</h2>
-    <a href="/sub-projects/">Sub-Projects</a>
-    <a href="/architecture/">Architecture</a>
-    <a href="/arjuna-core/">Arjuna Core</a>
-    <a href="/transaction-fundamentals/">Transaction Fundamentals</a>
-    <a href="/presentations/">Presentations</a>
-    <a href="/narayana-features/">Features</a>
-    <a href="/jakarta-ee-support/">Jakarta EE Support</a>
-    <a href="/platform-support/">Platform Support</a>
-    <a href="/web-services-support/">Web Services Support</a>
-    <a href="/lra/">Long Running Actions</a>
-    <a href="/history/">History</a>
+    <a href="/sub-projects/index.html">Sub-Projects</a>
+    <a href="/architecture/index.html">Architecture</a>
+    <a href="/arjuna-core/index.html">Arjuna Core</a>
+    <a href="/transaction-fundamentals/index.html">Transaction Fundamentals</a>
+    <a href="/presentations/index.html">Presentations</a>
+    <a href="/narayana-features/index.html">Features</a>
+    <a href="/jakarta-ee-support/index.html">Jakarta EE Support</a>
+    <a href="/platform-support/index.html">Platform Support</a>
+    <a href="/web-services-support/index.html">Web Services Support</a>
+    <a href="/lra/index.html">Long Running Actions</a>
+    <a href="/history/index.html">History</a>
   </div>
