--- a/layouts/partials/sidebar/docs-toc.html
+++ b/layouts/partials/sidebar/docs-toc.html
@@ -1,9 +1,9 @@
 <div class="page-links">
   <h2 class="h3">Getting Started</h2>
-  <a href="/documentation/">Read our getting started documentation</a>
+  <a href="/documentation/index.html">Read our getting started documentation</a>
   <a href="https://github.com/jbosstm/quickstart">Run our quickstarts</a>
   <a href="https://www.wildfly.org/downloads/">Download the latest release of WildFly</a>
-  <a href="/community/#our-team">Meet the team</a>
+  <a href="/community/index.html#our-team">Meet the team</a>
   <a href="https://github.com/jbosstm/narayana/blob/main/CONTRIBUTING.md">Get involved!</a>
 </div>
 <div class="page-links">
