--- a/layouts/partials/footer/custom-footer.html
+++ b/layouts/partials/footer/custom-footer.html
@@ -6,13 +6,13 @@
         <h4>Navigate</h4>
         <ul class="list-unstyled">
             <li>
-                <a href="/documentation/" title="Learn">Learn</a>
+                <a href="/documentation/index.html" title="Learn">Learn</a>
             </li>
             <li>
                 <a href="https://github.com/jbosstm/quickstart" title="Get Started">Get Started</a>
             </li>
             <li>
-                <a href="/downloads/" title="Download">Download</a>
+                <a href="/downloads/index.html" title="Download">Download</a>
             </li>
         </ul>
     </div>
@@ -35,7 +35,7 @@
         <ul class="list-unstyled">
             <li> <a href="https://issues.jboss.org/browse/JBTM/" title="Submit a bug">Submit a bug</a> </li>
             <li> <a href="https://github.com/jbosstm" title="Write code">Write Code</a> </li>
-            <li> <a href="/governance/" title="Governance">Governance</a> </li>
+            <li> <a href="/governance/index.html" title="Governance">Governance</a> </li>
         </ul>
     </div>
     <div class="col-md-5 col-md-offset-1">
